# lifeograph-android

./: .gitignore  BUILDING.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  lint.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: example.diary
app/src/main/java/de/dizayn/blhps/lifeograph/: ActivityDiary.java  ActivityEntry.java  ActivityLogin.java  ActivityOpenDiary.java  ActivitySettings.java  AddElemAction.java  Chapter.java  Date.java  DialogCalendar.java  DialogInquireText.java  Diary.java  DiaryElement.java  Entry.java  Filter.java  Lifeograph.java  Tag.java  Theme.java  ToDoAction.java  ToggleImageButton.java  Untagged.java
app/src/main/java/net/sourceforge/lifeograph/: ActivityChapterTag.java  ActivityDiary.java  ActivityEntry.java  ActivityLogin.java  ActivityMain.java  ActivityMain.kt  ActivitySettings.java  AdFragment.java  AddElemAction.java  Chapter.java  ChartData.java  ChartData.kt  ChartElem.java  ChartElem.kt  ChartPoints.java  Date.java  DialogAbout.java  DialogAbout.kt  DialogCalendar.java  DialogCalendar.kt  DialogEntryTag.java  DialogInquireText.java  DialogInquireText.kt  DialogParagraph.kt  DialogPassword.java  DialogPassword.kt  DialogPicker.kt  DialogTags.java  DialogTheme.java  Diary.java  Diary.kt  DiaryElemAdapter.java  DiaryElemTag.java  DiaryElement.java  DiaryElementChart.java  DiaryFragment.java  EditTextEntry.kt  Entry.java  Filter.java  Filter.kt  (+61 more)
app/src/main/java/net/sourceforge/lifeograph/helpers/: Date.kt  DiaryDirectoryUtil.kt  FileUtil.java  Result.java  STR.kt
app/src/main/java/net/sourceforge/lifeograph/inappbilling/util/: Base64.java  Base64DecoderException.java  IabBroadcastReceiver.java  IabException.java  (+6 more)
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  android_shim.hpp  fuzzyfinder.hpp  helpers.c  helpers.cpp  helpers.h  helpers.hpp  jni_chartdata.cpp  jni_date.cpp  jni_diary.cpp  jni_diary_element.cpp  jni_entry.cpp  jni_filter.cpp  jni_native_bridge.cpp  jni_paragraph.cpp  jni_str.cpp  jni_stringdef_elem.cpp  jni_view_chart.cpp  lifeocrypt.c  lifeograph.hpp  lifeograph_jni.cpp  logid.cpp  logid.hpp  settings.hpp  stock_ids.dict  strings.hpp  undo.cpp  undo.hpp
app/src/main/jni/diaryelements/: diary.cpp  diary.hpp  diarydata.cpp  diarydata.hpp  entry.cpp  entry.hpp  filter.cpp  filter.hpp  paragraph.cpp  paragraph.hpp  tableelem.cpp  tableelem.hpp
app/src/main/jni/parsers/: parser_background.cpp  parser_background.hpp  parser_base.cpp  parser_base.hpp  parser_stripper.cpp  parser_stripper.hpp  parser_upgrader.cpp  parser_upgrader.hpp
app/src/main/jni/python/: code_languages.cpp  code_languages.hpp
app/src/main/jni/widgets/: chart_common.cpp  chart_common.hpp
app/src/main/res/color/: nav_item_tint.xml
app/src/main/res/drawable/: action_bar_tabs.xml  ic_action_add.xml  ic_action_check.xml  ic_action_copy.xml  ic_action_revert.xml  ic_action_search.xml  ic_action_trash.xml  ic_add.xml  ic_browse.xml  ic_bullet.xml  ic_calendar.xml  ic_chapter.xml  ic_chart.xml  ic_check.xml  ic_clear.xml  ic_collapsed.xml  ic_diary.xml  ic_entry.xml  ic_entry_inactive.xml  ic_entry_parent.xml  ic_entry_script.xml  ic_expanded_dn.xml  ic_expanded_up.xml  ic_favorite.xml  ic_favorite_active.xml  ic_favorite_inactive.xml  ic_filter.xml  ic_filter_inactive.xml  ic_milestone.xml  ic_not.xml  ic_not_inactive.xml  ic_overlay_check.xml  ic_overlay_favorite.xml  ic_overlay_trashed.xml  ic_para_align_center.xml  ic_para_align_left.xml  ic_para_align_right.xml  ic_para_indent_less.xml  ic_para_indent_more.xml  ic_settings.xml  (+28 more)
app/src/main/res/drawable-anydpi/: ic_chart.xml  ic_filter.xml
app/src/main/res/drawable-hdpi/: icon_entry.xml
app/src/main/res/layout/: cal_day.xml  calendar.xml  chapter.xml  dialog_about.xml  dialog_calendar.xml  dialog_entry_tags.xml  dialog_inquire_text.xml  dialog_new_diary.xml  dialog_paragraph.xml  dialog_password.xml  dialog_picker.xml  dialog_tags.xml  dialog_theme.xml  diary.xml  diary_wide.xml  entry.xml  fragment_ad.xml  fragment_chart.xml  fragment_elem_list.xml  fragment_entry.xml  fragment_filter.xml  fragment_filterer_favorite.xml  fragment_filterer_has_tag.xml  fragment_filterer_is.xml  fragment_filterer_status.xml  fragment_filterer_trashed.xml  fragment_filterer_unsopported.xml  fragment_list_chart.xml  fragment_list_charts.xml  fragment_list_diaries.xml  fragment_list_diary.xml  fragment_list_entries.xml  fragment_list_entry.xml  fragment_list_filters.xml  fragment_list_themes.xml  fragment_search.xml  fragment_theme.xml  home.xml  imagelist.xml  list_item_basic.xml  (+12 more)
app/src/main/res/layout-land/: calendar.xml  fragment_chart.xml
app/src/main/res/menu/: menu_calendar_contextual.xml  menu_chapter_ctg.xml  menu_chapter_tag.xml  menu_chart.xml  menu_diary.xml  menu_drawer_main.xml  menu_entry.xml  menu_filter.xml  menu_list_diaries.xml  menu_list_entries.xml  menu_list_line.xml  menu_list_themes.xml  menu_login.xml  menu_search.xml  menu_tag_ctg.xml  menu_theme.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ic_launcher_background.xml  ids.xml  strings.xml  strings_activity_settings.xml  styles.xml
app/src/main/res/values-de/: strings.xml  strings_activity_settings.xml
app/src/main/res/values-tr/: strings.xml  strings_activity_settings.xml
app/src/main/res/xml/: data_extraction_rules.xml  pref_general.xml  pref_headers.xml
fastlane/: README.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 20020.txt
gradle/wrapper/: gradle-wrapper.properties
res/drawable-hdpi/: icon_tag.xml
res/layout/: cal_day.xml  dialog_about.xml  imagelist.xml
res/values/: colors.xml  strings.xml  styles.xml
src/de/dizayn/blhps/lifeograph/: ActivityDiary.java  ActivityEntry.java  ActivityOpenDiary.java  Chapter.java  Date.java  DialogCalendar.java  Diary.java  DiaryElement.java  Entry.java  Lifeobase.java  Tag.java  Theme.java
